--- a/pom.xml
+++ b/pom.xml
@@ -17,20 +17,20 @@
 
     <properties>
         <!-- General -->
-        <jdk.version>1.8</jdk.version>
+        <jdk.version>11</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencies Version -->
-        <docker-compose-rule.version>0.32.1</docker-compose-rule.version>
-        <junit-platform.version>1.2.0</junit-platform.version>
-        <junit-jupiter.version>5.2.0</junit-jupiter.version>
-        <postgresql.version>42.1.4</postgresql.version>
+        <docker-compose-rule.version>0.35.0</docker-compose-rule.version>
+        <junit-platform.version>1.3.2</junit-platform.version>
+        <junit-jupiter.version>5.4.0-M1</junit-jupiter.version>
+        <postgresql.version>42.2.5</postgresql.version>
         <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
         <unirest-java.version>1.4.9</unirest-java.version>
 
         <!-- Plugins Version -->
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
     </properties>
 
     <dependencies>
